171017 - fixed missing scrollbar and added closing element styles

--- a/src/sass/project/components/_answer.scss
+++ b/src/sass/project/components/_answer.scss
@@ -23,10 +23,12 @@ $h-arrow: 50px;
 			user-select: initial;
 			opacity: 1;
 			visibility: visible;
+			overflow: auto;
 		}
 	}
 	&__header {
 		color: $c-accordion-title;
+		position: relative;
 	}
 	&__category {
 		display: inline-block;
@@ -59,6 +61,35 @@ $h-arrow: 50px;
 	}
 	p {
 		margin-bottom: $base-spacing;
+	}
+	&__close {
+		@include position(absolute, 0 0 null null);
+		@include size($base-spacing*2);
+		cursor: pointer;
+		&:before, &:after {
+			content: '';
+			background-color: $c-border;
+			@include position(absolute, 50% 0 null 0);
+			@include size(100% 2px);
+			margin-top: -1px;
+			display: block;
+			@include will-change(transform);
+			@extend %anim-base;
+		}
+		&:before {
+			transform: rotate(45deg);
+		}
+		&:after {
+			transform: rotate(-45deg);
+		}
+		&:hover {
+			&:before {
+				transform: rotate(-45deg);
+			}
+			&:after {
+				transform: rotate(45deg);
+			}
+		}
 	}
 }
 
